<resources>
    <string name="app_name">Ocat</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordAgain">Password Again</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="verificationCode">Verification Code   </string>
    <string name="sendCode">SEND CODE</string>
    <string name="sendCodeAgain">SEND CODE Again</string>
    <string name="currentEmail">Current Email</string>

    <string name="sendCodeSuccess">Code Sent Successfully</string>
    <string name="emailEmpty">Fail! Email Can\'t be Null</string>
    <string name="passwordEmpty">Fail! Password Can\'t be Null</string>
    <string name="inputEmpty">Fail! Input Can\'t be Null</string>

    <string name="invalidPassword">Invalid Password</string>
    <string name="userAlreadyExists">User Already Exists</string>
    <string name="emailAlreadyExists">Email Already Exists</string>
    <string name="phoneAlreadyExists">Email Already Exists</string>
    <string name="registerFail">Register Fail</string>
    <string name="forgetFail">Reset Password Fail</string>
    <string name="codeEmpty">Fail! Code Can\'t be Null</string>
    <string name="invalidCode">Invalid Code</string>
    <string name="sendCodeFail">Fail to Send Code</string>
    <string name="emailNotExists">Email Not Exists</string>
    <string name="updateFail">Update Fail</string>
    <string name="illegalParams">Illegal Params</string>
    <string name="noRecord">No Record Exists</string>
    <string name="noRecordWelcome">No Record Yet! Make Your First Record Now</string>
    <string name="deleteFail">Delete Fail</string>
    <string name="insertFail">Insert Fail</string>
    <string name="noModificationYet">You Haven\'t Modify Anything</string>

    <string name="passwordNotSame">Fail! Passwords Are Not Same</string>
    <string name="passwordTooShort">Fail! Password Too Short</string>
    <string name="operationSuccess">Operation Success</string>
    <string name="syncSuccess">Sync Success</string>
    <string name="somethingNull">Fail! There is Something Null</string>
    <string name="atLeastOneItem">At Least One Item</string>

    <string name="hiddenUsername">Please Enter Your Username</string>
    <string name="hiddenPassword">Please Enter Your Password</string>
    <string name="hiddenPasswordAgain">Please Enter Your Password Again</string>
    <string name="hiddenEmail">Please Enter Your Email</string>
    <string name="hiddenVerificationCode">Please Enter Your Verification Code</string>

    <string name="welcome">WELCOME!  </string>
    <string name="personal">Personal Information</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="logOut">LOG OUT</string>
    <string name="quit">QUIT</string>
    <string name="change">切换至中文版</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="in">Income</string>
    <string name="out">Expense</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="noNetworkConnection">No Network Connection</string>
    <string name="warning_message_submit">Any Modification Will Be Committed Permanently\n\nThis Operation Will Not Be Reversible</string>
    <string name="warning_message_delete">Do you want to delete this record?</string>
    <string name="allPlans">All Plans</string>
    <string name="all">All</string>

    <string name="title_hotspots">Hotspots</string>
    <string name="title_finance">Finance</string>
    <string name="title_study">Study</string>
    <string name="title_me">Me</string>
    <string name="title_activity_app_bottom">AppBottomActivity</string>
    <string name="daily_rate">Daily Rate</string>
    <string name="detail_bill">Detail Bill</string>
    <string name="my_bill">My Bill</string>
    <string name="new_record">New Record</string>
    <string name="class_table">Class Table</string>
    <string name="reminder">Reminder</string>
    <string name="about">About</string>
    <string name="news">News</string>
    <string name="tranlsation">Translation</string>
    <string name="account_check">Account Check</string>
    <string name="password_reset">Password Reset</string>

    <string name="newsFinance">Finance</string>
    <string name="newsFilm">Film</string>
    <string name="newsEntertainment">ENT</string>
    <string name="newsTv">TV</string>
    <string name="indexClass">No./Day</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="courseName">Course Name</string>
    <string name="dayOfWeek">Day of Week</string>
    <string name="startIndex">Start</string>
    <string name="endIndex">End</string>
    <string name="teacher">Teacher</string>
    <string name="classroom">Classroom</string>
    <string name="classLongPress">\n Long Press to Delete One Course \n</string>

    <string name="Add_your_arrangement_here">Add your arrangement here:</string>
    <string name="Add_your_arrangementsDate_here">Date:</string>
    <string name="newReminder">New Reminder</string>


    <string-array name="countries_array">
        <item>China</item>
        <item>Hong Kong</item>
        <item>Canada</item>
        <item>Australia</item>
        <item>United States</item>
        <!--        <item>United Kingdom</item>-->
        <item>Japan</item>
        <!--        <item>India</item>-->
        <!--        <item>Brazil</item>-->
    </string-array>

    <string-array name="currency_code">
        <item>CNY</item>
        <item>HKD</item>
        <item>CAD</item>
        <item>AUD</item>
        <item>USD</item>
        <!--        <item>GBP</item>-->
        <item>JPY</item>
        <!--        <item>INR</item>-->
        <!--        <item>BRL</item>-->
    </string-array>

    <string-array name="finance_category">
        <item>Traffic</item>
        <item>Food</item>
        <item>Game</item>
        <item>Life</item>
        <item>Phone Bill</item>
        <item>Room</item>
        <item>Education</item>
        <item>Medical</item>
        <item>Electronics</item>
        <item>Pet</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

