<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_hotspots">

    <fragment
        android:id="@+id/navigation_hotspots"
        android:name="com.android.ocat.ui.hotspots.HotspotsFragment"
        android:label="@string/title_hotspots"
        tools:layout="@layout/fragment_hotspots" />

    <fragment
        android:id="@+id/navigation_finance"
        android:name="com.android.ocat.ui.finance.FinanceFragment"
        android:label="@string/daily_rate"
        tools:layout="@layout/fragment_finance" />

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.android.ocat.ui.study.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.android.ocat.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/navigation_bookKeeping"
        android:name="com.android.ocat.ui.finance.BookKeepingFragment"
        android:label="@string/my_bill"
        tools:layout="@layout/fragment_book_keeping" />

    <fragment
        android:id="@+id/navigation_detailFinance"
        android:name="com.android.ocat.ui.finance.DetailFinanceFragment"
        android:label="@string/detail_bill"
        tools:layout="@layout/fragment_detail_finance" />
</navigation>
