<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/currentEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentEmail"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="left"
        />
        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="left"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/passwordForgetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:gravity="left">

        </TextView>
        <EditText
            android:id="@+id/passwordForgetEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hiddenPassword"
            android:inputType="textPassword"
            android:ems="20"

            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/password2ForgetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordAgain"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:gravity="left">

        </TextView>
        <EditText
            android:id="@+id/password2ForgetEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hiddenPasswordAgain"
            android:inputType="textPassword"
            android:ems="20"

            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/enterCodeForgetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verificationCode"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:layout_gravity="center"
            >
        </TextView>
        <Button
            android:id="@+id/getCodeForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sendCode"
            android:layout_marginLeft="15dp"
            android:onClick="onSendCodeClicked"
            >
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/enterCodeForgetEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hiddenVerificationCode"
            android:inputType="number"
            android:ems="6">
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/submit2Forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorButtonText"
        android:onClick="onSubmitClicked"
        >
    </Button>
    <Button
        android:id="@+id/cancel2Forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:onClick="onCancelClicked"
        >
    </Button>


</LinearLayout>
