<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:gravity="left"
            android:layout_marginTop="15dp"
            >

        </TextView>
        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hiddenUsername"
            android:inputType="text"
            android:ems="15"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:gravity="left">

        </TextView>
        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hiddenPassword"
            android:inputType="textPassword"
            android:ems="20"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/password2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordAgain"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:gravity="left">

        </TextView>
        <EditText
            android:id="@+id/password2Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hiddenPasswordAgain"
            android:inputType="textPassword"
            android:ems="20"
            >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:gravity="left">

        </TextView>
        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hiddenEmail"
            android:inputType="textEmailAddress"
            android:ems="20">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/enterCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verificationCode"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:layout_gravity="center"
            >
        </TextView>
        <Button
            android:id="@+id/getCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sendCode"
            android:layout_marginLeft="15dp"
            android:onClick="onSendCodeClicked"
            >
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/enterCodeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hiddenVerificationCode"
            android:inputType="number"
            android:ems="6"
            >
        </EditText>
    </LinearLayout>
    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        android:layout_marginLeft="5dp">-->
    <!--        <TextView-->
    <!--            android:id="@+id/phoneText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="Phone"-->
    <!--            android:textSize="16sp"-->
    <!--            android:textColor="@color/colorLogin"-->
    <!--            android:gravity="left">-->

    <!--        </TextView>-->
    <!--        <EditText-->
    <!--            android:id="@+id/phoneEdit"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="Please Enter Your Phone"-->
    <!--            android:inputType="number"-->
    <!--            android:ems="15"-->
    <!--            android:layout_marginRight="5dp"-->

    <!--            >-->
    <!--        </EditText>-->
    <!--    </LinearLayout>-->
    <Button
        android:id="@+id/userRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorButtonText"
        android:onClick="onSubmitClicked"
        >
    </Button>
    <Button
        android:id="@+id/userRegisterCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:onClick="onCancelClicked"
        >
    </Button>

</LinearLayout>
