<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

        <TextView
            android:id="@+id/classTable"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/account_check"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/usernameForgetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:gravity="left"
            android:layout_marginTop="15dp"
            >

        </TextView>
        <EditText
            android:id="@+id/usernameForgetEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hiddenEmail"
            android:inputType="text"
            android:ems="15">
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/submitForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorButtonText"
        android:onClick="onSubmitClicked"
        >
    </Button>
    <Button
        android:id="@+id/cancelForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:onClick="onCancelClicked"
        >
    </Button>


</LinearLayout>
