<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/pullToRefresh"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/newsFinance"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="19sp"
                android:text="@string/newsFinance"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/newsFilm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="19sp"
                android:text="@string/newsFilm"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/newsEntertainment"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="19sp"
                android:text="@string/newsEntertainment"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/newsTV"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="19sp"
                android:text="@string/newsTv"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
